force-app/main/default/objects/Assessment__c/fields/Angular__c.field-meta.xml
<CustomField>
    <fullName>Angular__c</fullName>
    <label>Angular</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>