force-app/main/default/objects/Assessment__c/fields/Atencion_al_detalle__c.field-meta.xml
<CustomField>
    <fullName>Atencion_al_detalle__c</fullName>
    <label>Atención al detalle</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>