force-app/main/default/objects/Assessment__c/fields/Candidato_evaluado__c.field-meta.xml
<CustomField>
    <fullName>Candidato_evaluado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidato evaluado</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>