force-app/main/default/objects/Assessment__c/fields/Cmasmas__c.field-meta.xml
<CustomField>
    <fullName>Cmasmas__c</fullName>
    <label>C++</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>