force-app/main/default/objects/Assessment__c/fields/Contacto_evaluado__c.field-meta.xml
<CustomField>
    <fullName>Contacto_evaluado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto evaluado</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>