force-app/main/default/objects/Assessment__c/fields/css__c.field-meta.xml
<CustomField>
    <fullName>css__c</fullName>
    <label>CSS</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>