force-app/main/default/objects/Assessment__c/fields/Django__c.field-meta.xml
<CustomField>
    <fullName>Django__c</fullName>
    <label>Django</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>