force-app/main/default/objects/Assessment__c/fields/html__c.field-meta.xml
<CustomField>
    <fullName>html__c</fullName>
    <label>HTML</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>