force-app/main/default/objects/Assessment__c/fields/Ingles__c.field-meta.xml
<CustomField>
    <fullName>Ingles__c</fullName>
    <label>Inglés</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>