force-app/main/default/objects/Assessment__c/fields/Java__c.field-meta.xml
<CustomField>
    <fullName>Java__c</fullName>
    <label>Java</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>