force-app/main/default/objects/Assessment__c/fields/JavaScript__c.field-meta.xml
<CustomField>
    <fullName>JavaScript__c</fullName>
    <label>JavaScript</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>