force-app/main/default/objects/Assessment__c/fields/Nombre_de_assessment__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_assessment__c</fullName>
    <label>Nombre de assessment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>