force-app/main/default/objects/Assessment__c/fields/Nombre_del_evaluado__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_evaluado__c</fullName>
    <label>Nombre del evaluado</label>
    <length>200</length>
    <type>Text</type>
</CustomField>