force-app/main/default/objects/Assessment__c/fields/php__c.field-meta.xml
<CustomField>
    <fullName>php__c</fullName>
    <label>PHP</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>