force-app/main/default/objects/Assessment__c/fields/Prueba_1__c.field-meta.xml
<CustomField>
    <fullName>Prueba_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prueba 1</label>
    <referenceTo>Prueba__c</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>