force-app/main/default/objects/Assessment__c/fields/Prueba_2__c.field-meta.xml
<CustomField>
    <fullName>Prueba_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prueba 2</label>
    <referenceTo>Prueba__c</referenceTo>
    <relationshipLabel>Assessments (Prueba 2)</relationshipLabel>
    <relationshipName>Assessments1</relationshipName>
    <type>Lookup</type>
</CustomField>