force-app/main/default/objects/Assessment__c/fields/Prueba_3__c.field-meta.xml
<CustomField>
    <fullName>Prueba_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prueba 3</label>
    <referenceTo>Prueba__c</referenceTo>
    <relationshipLabel>Assessments (Prueba 3)</relationshipLabel>
    <relationshipName>Assessments2</relationshipName>
    <type>Lookup</type>
</CustomField>