force-app/main/default/objects/Assessment__c/fields/Python__c.field-meta.xml
<CustomField>
    <fullName>Python__c</fullName>
    <label>Python</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>