force-app/main/default/objects/Assessment__c/fields/Razonamiento_numerico__c.field-meta.xml
<CustomField>
    <fullName>Razonamiento_numerico__c</fullName>
    <label>Razonamiento numérico</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>