force-app/main/default/objects/Assessment__c/fields/React_JS__c.field-meta.xml
<CustomField>
    <fullName>React_JS__c</fullName>
    <label>React JS</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>