force-app/main/default/objects/Assessment__c/fields/Resultado_1__c.field-meta.xml
<CustomField>
    <fullName>Resultado_1__c</fullName>
    <label>Resultado 1</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>