force-app/main/default/objects/Assessment__c/fields/Resultado_2__c.field-meta.xml
<CustomField>
    <fullName>Resultado_2__c</fullName>
    <label>Resultado 2</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>