force-app/main/default/objects/Assessment__c/fields/Resultado_3__c.field-meta.xml
<CustomField>
    <fullName>Resultado_3__c</fullName>
    <label>Resultado 3</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>