force-app/main/default/objects/Assessment__c/fields/Tipo_de_assessment__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_assessment__c</fullName>
    <label>Tipo de assessment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Angular</fullName>
            </value>
            <value>
                <fullName>DevOps</fullName>
            </value>
            <value>
                <fullName>React</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>