force-app/main/default/objects/Assessment__c/fields/Total_assessment__c.field-meta.xml
<CustomField>
    <fullName>Total_assessment__c</fullName>
    <formula>IF( Resultado_5__c &lt;&gt; 0, (Resultado_1__c +  Resultado_2__c + Resultado_3__c + Resultado_4__c + Resultado_5__c)/5, 
   IF(AND(Resultado_5__c  =  0,Resultado_4__c &lt;&gt; 0) , (Resultado_1__c +  Resultado_2__c + Resultado_3__c + Resultado_4__c)/4, 
      IF(AND(Resultado_5__c = 0,Resultado_4__c =0, Resultado_3__c &lt;&gt; 0), (Resultado_1__c +  Resultado_2__c + Resultado_3__c)/3, 
          (Resultado_1__c +  Resultado_2__c )/2 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total assessment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>